--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.12.0",
     "multer": "^1.4.5-lts.1"
   },
@@ -23,6 +24,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.9",
     "tsx": "^4.19.3",
